      mandatory parameter it is supposed to.

  * lib/Checker.pm:
    + [NT] Removed, merged into frontend/lintian.
  * lib/Lintian/Architecture.pm:
    + [NT] New file.
  * lib/Lintian/Check.pm:
    + [NT] Do not check for missing uploader address as it cannot be
      done reliably anymore.
    + [NT] Applied patch from intrigeri to remove the "not-full-name"
      tags.
  * lib/Lintian/CheckScript.pm:
    + [NT] New file.
  * lib/Lintian/Collect/{Binary,Source}.pm:
    + [NT] Assume packages to be non-native when it cannot be
      accurately determined due to missing version field.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Fixed an error in parsing symbol names when using readelf
      as replacement for objdump.
  * lib/Lintian/Collect/Group.pm:
    + [NT] Made direct_dependencies properly handle udebs.  This fixes
      an error that would cause lintian to skip some checks for udebs.
  * lib/Lintian/Collect/Package.pm:
    + [NT] Map an owner/group of "0/0" to "root/root".  This avoids a
      number of false-positive ownership tags if only numerical
      ownership is available in the tarball.  Thanks to Thorsten
      Glaser for the report.  (Closes: #638278)
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed assumption that source packages always have a
      format field.
  * lib/Lintian/Lab.pm:
    + [NT] Added "is_temp" method to identify temp labs from static
      labs.
    + [NT] Corrected issue where the lab would record binaries as
      being from "main", even if their "section" field implied
      otherwise.
  * lib/Lintian/Lab/Entry.pm:
    + [NT] Properly strip whitespace when loading collection status.
  * lib/Lintian/Processable/Package.pm:
    + [NT] Use part of the file name as package name if the mandatory
      "Package" or "Source" fields are missing rather than choking.
  * lib/Lintian/Profile.pm:
    + [NT] Catch recursively defined profiles when the Profile field