@@ -5,6 +5,8 @@
 
   * Suppress "should close ITP bug" messages.  (Closes: #123456)
   * This line has a speling error.
+    - This line has the same speling error, but we should only
+      get one tag for it.
   * Corrected spelling: abov -> above.
 
  -- {$author}  {$date}
